vertical-align fix

--- a/island.css
+++ b/island.css
@@ -1,7 +1,7 @@
 /* Reset */
 
 * {
-	vertical-align: baseline;
+	/*vertical-align: baseline;*/
 	font-weight: inherit;
 	font-family: inherit;
 	font-style: inherit;
